--- a/LabTP/LabTP/LabTP.csproj
+++ b/LabTP/LabTP/LabTP.csproj
@@ -56,6 +56,12 @@
     <Compile Include="FormBase.Designer.cs">
       <DependentUpon>FormBase.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormGunConfig.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormGunConfig.Designer.cs">
+      <DependentUpon>FormGunConfig.cs</DependentUpon>
+    </Compile>
     <Compile Include="Gun.cs" />
     <Compile Include="IAntiaircraftGun.cs" />
     <Compile Include="MultiLevelBase.cs" />
@@ -63,6 +69,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormBase.resx">
       <DependentUpon>FormBase.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormGunConfig.resx">
+      <DependentUpon>FormGunConfig.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
