--- a/LabTP/LabTP/App.config
+++ b/LabTP/LabTP/App.config
@@ -1,6 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+  </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <nlog xmlns =" http://www.nlog-project.org/schemas/NLog.xsd"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <targets>
+      <target name ="logfile" xsi:type="File" fileName="C:\\Users\\mafio\\Source\\Repos\\PIbd-21TyaginI.S.CSharp\\LabTP\\log.txt"/>
+    <target name ="logerrors" xsi:type="File" fileName="C:\\Users\\mafio\\Source\\Repos\\PIbd-21TyaginI.S.CSharp\\LabTP\\logerror.txt"/>
+    </targets>
+  <rules>
+    <logger name="*" minlevel="Info" writeTo="logfile"/>
+  <logger name="*" level="Error" writeTo="logerrors"/>
+    </rules>
+ 
+  </nlog>
+    
 </configuration>
