--- a/LabTP/LabTP/LabTP.csproj
+++ b/LabTP/LabTP/LabTP.csproj
@@ -33,8 +33,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.6.8\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,6 +57,9 @@
     <Compile Include="AbGun.cs" />
     <Compile Include="AntiaircraftGun.cs" />
     <Compile Include="Base.cs" />
+    <Compile Include="BaseNotFoundException.cs" />
+    <Compile Include="BaseOccupiedPlaceException.cs" />
+    <Compile Include="BaseOverflowException.cs" />
     <Compile Include="Direction.cs" />
     <Compile Include="FormBase.cs">
       <SubType>Form</SubType>
@@ -82,6 +93,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
